--- a/Pages/Regions/Index.cshtml
+++ b/Pages/Regions/Index.cshtml
@@ -68,7 +68,7 @@
 <div class="d-flex justify-content-end mb-2 gap-2">
     <button type="button" class="btn btn-inverse-danger btn-fw" id="deleteAllBtn" >Tout supprimer</button>
     <button type="button" class="btn btn-inverse-success btn-fw" id="validateAllBtn" >Valider tout</button>
-    <a asp-page-handler="ExportAllPdf" class="btn btn-inverse-secondary btn-fw">Exporter PDF</a>
+    <a asp-page-handler="ExportAllPdf" asp-route-SearchIntitule="@Model.SearchIntitule" asp-route-MinPopulation="@Model.MinPopulation" asp-route-MaxPopulation="@Model.MaxPopulation" class="btn btn-inverse-secondary btn-fw">Exporter PDF</a>
 </div>
 
 <table class="table table-hover align-middle" >
@@ -106,7 +106,7 @@
 <br>
 
 <div class="d-flex justify-content-between align-items-center mb-4">
-<form method="get" class="d-flex align-items-center">
+  <form method="get" class="d-flex align-items-center">
     <div class="d-flex align-items-center"> 
     <label for="pageSize" class="me-2">Afficher :</label> 
     <select class="form-select d-inline-block w-auto"  id="pageSize"  name="PageSize" onchange="this.form.submit()">> 
@@ -117,11 +117,11 @@
     <span class="ms-2">par page</span>
       <input type="number" id="customPageSize" name="PageSize" style="display:none;" min="1" max="100">
     </div> 
-  <input type="hidden" name="pageIndex" value="1" />
-  <input type="hidden" name="SearchIntitule" value="@(Model.SearchIntitule)" />
-  <input type="hidden" name="MinPopulation" value="@(Model.MinPopulation)" />
-  <input type="hidden" name="MaxPopulation" value="@(Model.MaxPopulation)" />
-  <input type="hidden" name="Etat" value="@(Model.Etat)" />
+    <input type="hidden" name="pageIndex" value="1" />
+    <input type="hidden" name="SearchIntitule" value="@(Model.SearchIntitule)" />
+    <input type="hidden" name="MinPopulation" value="@(Model.MinPopulation)" />
+    <input type="hidden" name="MaxPopulation" value="@(Model.MaxPopulation)" />
+    <input type="hidden" name="Etat" value="@(Model.Etat)" />
   </form>
   <nav aria-label="Page navigation example" class="mt-3">
       <ul class="pagination justify-content-end">
@@ -132,15 +132,11 @@
         </li>
         @if (Model.Regions.HasPreviousPage)
         {
-            <li class="page-item">
-                <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)" asp-route-PageSize="@Model.PageSize" asp-route-SearchIntitule="@(Model.SearchIntitule)" asp-route-Etat="@(Model.Etat)">Précédent</a>
-            </li>
+          <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)" asp-route-PageSize="@Model.PageSize" asp-route-SearchIntitule="@(Model.SearchIntitule)" asp-route-Etat="@(Model.Etat)">Précédent</a></li>
         }
         @if (Model.Regions.HasNextPage)
         {
-            <li class="page-item">
-                <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)" asp-route-PageSize="@Model.PageSize" asp-route-SearchIntitule="@(Model.SearchIntitule)" asp-route-Etat="@(Model.Etat)">Suivant</a>
-            </li>
+          <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)" asp-route-PageSize="@Model.PageSize" asp-route-SearchIntitule="@(Model.SearchIntitule)" asp-route-Etat="@(Model.Etat)">Suivant</a></li>
         }
       </ul>
   </nav>
@@ -171,7 +167,18 @@
         <button type="button" class="btn btn-secondary btn" data-bs-dismiss="modal">Annuler</button>
         <button type="submit" class="btn btn-primary btn" id="saveRegionBtn">Enregistrer</button>
       </div>
-      <div asp-validation-summary="All" class="text-danger"></div>
+      @if (!ViewData.ModelState.IsValid)
+      {
+        <div class="alert alert-danger d-flex flex-column align-items-center mx-auto text-center" role="alert" style="border-radius:8px; font-weight:500;  max-width:450px;">
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <div>
+                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                {
+                  <div >@error.ErrorMessage</div>
+                }
+            </div>
+        </div>
+      }
     </form>
     </div>
   </div>
@@ -213,7 +220,7 @@
       </div>
       <div class="modal-body">
         <input type="hidden" id="regionId" name="id" />
-        <p>Voulez-vous vraiment supprimer la commune "<strong id="regionName"></strong>" de la liste?</p>
+        <p>Voulez-vous vraiment supprimer la région "<strong id="regionName"></strong>" de la liste?</p>
       </div>
       <div class="modal-footer p-2">
         <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
@@ -234,7 +241,7 @@
       </div>
       <div class="modal-body">
         <input type="hidden" id="regionId" name="id" />
-        <p>Voulez-vous vraiment valider la commune "<strong id="regionName"></strong>" ?</p>
+        <p>Voulez-vous vraiment valider la région "<strong id="regionName"></strong>" ?</p>
       </div>
       <div class="modal-footer p-2">
         <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
@@ -274,9 +281,10 @@
 
 @section Scripts {
     <script src="~/assets/js/personal/region.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> *@
     <script>
-        $(document).ready(function () {
+         $(document).ready(function () {
             var showModal = '@ViewData["ShowCreateModal"]';
             if (showModal === 'True') {
                 var myModal = new bootstrap.Modal(document.getElementById('createModal'));
