--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -292,7 +292,7 @@
         </div>
     </div>
     @RenderSection("Styles", required: false)
-    @await RenderSectionAsync("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
     <script src="~/assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="~/assets/vendors/chart.js/chart.umd.js"></script>
     <script src="~/assets/js/off-canvas.js"></script>
