--- a/Pages/Districts/Index.cshtml
+++ b/Pages/Districts/Index.cshtml
@@ -56,10 +56,10 @@
       <input type="text" class="form-control form-control-sm" placeholder="Région" name="SearchRegion" >
     </div>
     <div class="col-md-2">
-      <input type="number" class="form-control form-control-sm" placeholder="Min pop." name="MinPopulation">
+      <input type="number" class="form-control form-control-sm" placeholder="Min population" name="MinPopulation">
     </div>
     <div class="col-md-2">
-      <input type="number" class="form-control form-control-sm" placeholder="Max pop." name="MaxPopulation">
+      <input type="number" class="form-control form-control-sm" placeholder="Max population" name="MaxPopulation">
     </div>
     <div class="col-md-2">
       <select class="form-select form-select-sm" name="Etat">
