--- a/Pages/Regions/Index.cshtml
+++ b/Pages/Regions/Index.cshtml
@@ -40,10 +40,10 @@
       <input type="text" class="form-control form-control-sm" placeholder="Nom" name="SearchIntitule" value="@(Model.SearchIntitule)">
     </div>
     <div class="col-md-2">
-      <input type="number" class="form-control form-control-sm" placeholder="Min pop." name="MinPopulation" value="@(Model.MinPopulation)">
+      <input type="number" class="form-control form-control-sm" placeholder="Min population" name="MinPopulation" value="@(Model.MinPopulation)">
     </div>
     <div class="col-md-2">
-      <input type="number" class="form-control form-control-sm" placeholder="Max pop." name="MaxPopulation" value="@(Model.MaxPopulation)">
+      <input type="number" class="form-control form-control-sm" placeholder="Max population" name="MaxPopulation" value="@(Model.MaxPopulation)">
     </div>
     <div class="col-md-2">
       <select class="form-select form-select-sm" name="Etat">
