--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -303,7 +303,7 @@
     <script src="~/assets/js/dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    @* <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvsxn8zUS2ZX_9Qv765_PsnwX53NP9wSk&callback=initMap" async defer></script> *@
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvsxn8zUS2ZX_9Qv765_PsnwX53NP9wSk&callback=initMap" async defer></script>
 
 
 </body>
